Implemented Project-Import functionality to ensure I don't nuke myself when letting these AI do...things....